MovieClip background initialisaton error #32686

Closed
opened 2012-09-28 19:26:55 +02:00 by Tobias Lijsen · 4 comments

%%%hi,
i found a serious bug in any cam-solve i did...

  • i solved a clip (with distortion values set in ClipEditor - in this case K1 and K2 are set to -0.1 and 0.05)
  • i click "set backound" and "setup tracking scene" buttons
  • goto 3d-view
  • now the clip in 3d-view background is not shown undistorted
  • check/uncheck the "Render Undistorted" checkbox - nothing changes

it should be shown undistorted - because the checkbox "Render Undistorted" is checked

my first thougt was - okay i have to build a undistorted proxy for my clip (in the clipeditors proxy panel)
so i do

  • goto clipeditor
  • build proxy for the clip (build undistorted)

i realized the error because i did following

  • go back to 3d-view
  • change backgound-img to show "proxy undistorted"

now its shows the undistorted proxy like it should
NOW THE ERROR :)
now you can switch the BG-image-clip back to "NO PROXY / FULL RENDER"

and now - magicaly - the checkbox "Render Undistorted" works on the original footage

even if i deleted the proxy files this work now

CONCLUSION
i have to build clip-proxy to get the checkbox "Render Undistorted" in 3D-View´s Background-Image to work

must be an initialization-error in 3d-bg-image for movie clips
maybe it gets no distortion-value from movie-clip or its gets not applyed

sorry for the long text - english is not my language ;) and that thing confused me a looooot :)
byebye
Tobi

%%%

%%%hi, i found a serious bug in any cam-solve i did... - i solved a clip (with distortion values set in ClipEditor - in this case K1 and K2 are set to -0.1 and 0.05) - i click "set backound" and "setup tracking scene" buttons - goto 3d-view - now the clip in 3d-view background is not shown undistorted - check/uncheck the "Render Undistorted" checkbox - nothing changes it should be shown undistorted - because the checkbox "Render Undistorted" is checked my first thougt was - okay i have to build a undistorted proxy for my clip (in the clipeditors proxy panel) so i do - goto clipeditor - build proxy for the clip (build undistorted) i realized the error because i did following - go back to 3d-view - change backgound-img to show "proxy undistorted" now its shows the undistorted proxy like it should NOW THE ERROR :) now you can switch the BG-image-clip back to "NO PROXY / FULL RENDER" and now - magicaly - the checkbox "Render Undistorted" works on the original footage even if i deleted the proxy files this work now CONCLUSION i have to build clip-proxy to get the checkbox "Render Undistorted" in 3D-View´s Background-Image to work must be an initialization-error in 3d-bg-image for movie clips maybe it gets no distortion-value from movie-clip or its gets not applyed sorry for the long text - english is not my language ;) and that thing confused me a looooot :) byebye Tobi %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'll make it shorter -- you simply need to enable Proxy for clip to see anything except original footage.

In case of undistorted original resolution it's not so much intuitive and it shouldn't be required. Would make it so "No proxy, full render" with "Render Undistorted" will work without Proxy enabled.%%%

%%%I'll make it shorter -- you simply need to enable Proxy for clip to see anything except original footage. In case of undistorted original resolution it's not so much intuitive and it shouldn't be required. Would make it so "No proxy, full render" with "Render Undistorted" will work without Proxy enabled.%%%

%%%Fixed in svn rev50979. Thanks for the report, closing.%%%

%%%Fixed in svn rev50979. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32686
No description provided.