Fix #32686: MovieClip background initialisaton error

Undistorted rendering with original footage settings does not require proxies to be enabled.